# perkpe

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  pytest.ini  requirements.txt  service.yaml
.agent/: task_list.md
.agent/skills/sentinel-adk-skill/: SKILL.md
.agent/skills/sentinel-adk-skill/resources/: alloydb_schema.sql
src/agents/: arbitrator.py  specialist_base.py  specialist_lifestyle.py  specialist_travel.py  specialist_utility.py
src/api/: product_routes.py  server.py  setup_routes.py  v1_routes.py
src/api/static/: index.html  script.js  style.css
src/core/: config.py  vertex_init.py
src/data/: alloydb_pool.py  local_db.py
src/mcp/: card_detector.py  gmail_parser.py  product_search.py  realtime_search.py
tests/: conftest.py  test_arbitrator.py  test_gmail_mcp.py  test_specialists.py
tests/data/: merchants.json
tests/data/samples/: reward_points.eml
